--- a/FoodCollector/PublicationEditorTVCPhoneNumEditorCustomCell.xib
+++ b/FoodCollector/PublicationEditorTVCPhoneNumEditorCustomCell.xib
@@ -16,7 +16,7 @@
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="מה מספר הטלפון?" textAlignment="right" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IMh-CF-HQE">
                         <rect key="frame" x="8" y="7" width="297" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="phonePad" returnKeyType="done"/>
+                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" returnKeyType="done"/>
                     </textField>
                 </subviews>
             </tableViewCellContentView>
