--- a/FoodCollector/PublicationEditorTVCDatePickerCustomCell.xib
+++ b/FoodCollector/PublicationEditorTVCDatePickerCustomCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -13,7 +13,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="wcq-Ka-gQ2">
+                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="wcq-Ka-gQ2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
                         <date key="date" timeIntervalSinceReferenceDate="461342120.16250002">
                             <!--2015-08-15 14:35:20 +0000-->
@@ -23,6 +23,10 @@
                         </connections>
                     </datePicker>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="centerX" secondItem="wcq-Ka-gQ2" secondAttribute="centerX" id="CaU-QG-7Ev"/>
+                    <constraint firstAttribute="centerY" secondItem="wcq-Ka-gQ2" secondAttribute="centerY" id="asV-Zp-F6k"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="cellDatePicker" destination="wcq-Ka-gQ2" id="LJi-10-pRe"/>
