--- a/FoodCollector/PublicationDetsilsCollectorActionsHeaderView.xib
+++ b/FoodCollector/PublicationDetsilsCollectorActionsHeaderView.xib
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PublicationDetsilsActionsHeaderView" customModule="FoodCollector" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PublicationDetsilsCollectorActionsHeaderView" customModule="FoodCollector" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -135,9 +135,9 @@
                 <outlet property="button1to2widthConstraint" destination="zTc-hc-F3I" id="uUg-Dx-Dob"/>
                 <outlet property="button2to3widthConstraint" destination="x0M-Xi-eOU" id="643-Yg-sDt"/>
                 <outlet property="button3to4widthConstraint" destination="cOA-E3-bCG" id="fNz-Zc-9bJ"/>
-                <outlet property="navigateButton" destination="goW-fJ-MoN" id="zJo-jW-wLv"/>
+                <outlet property="navigateButton" destination="goW-fJ-MoN" id="tL0-ta-TBi"/>
                 <outlet property="phoneCallButton" destination="sxk-05-spA" id="HlO-Vw-hM5"/>
-                <outlet property="registerButton" destination="RF8-iD-c8n" id="0iV-Up-YuR"/>
+                <outlet property="registerButton" destination="RF8-iD-c8n" id="QTZ-nY-Fc2"/>
                 <outlet property="smsButton" destination="mAK-ST-0jT" id="coT-0q-WQh"/>
             </connections>
         </view>
